@@ -1,3 +1,6 @@
+2011-01-06 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.57
+	* added IMPLODE to change an array to a string
+
 2011-01-05 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.56 (469)
 	* added INSTRX() to return position of a Regular Expression
 	* added REPLACEX() function to find an regular expression and replace with a string
